<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="appname">Capital Quiz</string>

    <string name="country">Country</string>
    <string name="capital">Capital</string>
    <string name="chooseMode">Mode Selection</string>

    <string name="chosen_capital">Capital Mode</string>
    <string name="chosen_country">Country Mode</string>
    <string name="all">All</string>
    <string name="europe">Europe</string>
    <string name="asia">Asia</string>
    <string name="north_america">North America</string>
    <string name="south_america">South America</string>
    <string name="africa">Africa</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>



</resources>